--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <h1>Pimlico Technologies</h1>
     <p>Pimlico Technologies is an AI company that gets insights out of your contracts, memos, and other documents.</p>
-    <p>Contact us: <a href="mailto:placeholder@pimlico.tech">placeholder@pimlico.tech</a></p>
+    <p>Contact us: <a href="mailto:hello@pimlico.tech">hello@pimlico.tech</a></p>
 </body>
 </html>
 
