--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -26,10 +26,47 @@
         }
     </style>
 </head>
-<body>
-    <h1>Pimlico Technologies</h1>
+<body> -->
+    <!-- <h1>Pimlico Technologies</h1>
     <p>Pimlico Technologies is an AI company that gets insights out of your contracts, memos, and other documents.</p>
     <p>Contact us: <a href="mailto:hello@pimlico.tech">hello@pimlico.tech</a></p>
 </body>
 </html>
+ -->
 
+ <!DOCTYPE html>
+ <html>
+ <head>
+     <title>Manifesto AI</title>
+     <style type="text/css">
+         html {
+             overflow: auto;
+         }  		
+         html,
+         body,
+         div,
+         iframe {
+             margin: 0px;
+             padding: 0px;
+             height: 100%;
+             border: none;
+         }	
+         iframe {
+             display: block;
+             width: 100%;
+             border: none;
+             overflow-y: auto;
+             overflow-x: hidden;
+         }
+     </style>
+ </head>
+ <body>
+     <iframe src="https://manifesto-v1.streamlit.app/"
+             frameborder="0"
+             marginheight="0"
+             marginwidth="0"
+             width="100%"
+             height="100%"
+             scrolling="auto">
+ </iframe>
+ </body>
