use streamlit embed link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
      </style>
  </head>
  <body>
-     <iframe src="https://manifesto-v1.streamlit.app/"
+     <iframe src="https://manifesto-v1.streamlit.app/?embed=true"
              frameborder="0"
              marginheight="0"
              marginwidth="0"
