--- a/index.html
+++ b/index.html
@@ -1,72 +1,14 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pimlico Technologies</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            line-height: 1.6;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        a {
-            color: blue;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=/email">
+    <title>Redirecting to Pimlico Email app</title>
 </head>
-<body> -->
-    <!-- <h1>Pimlico Technologies</h1>
-    <p>Pimlico Technologies is an AI company that gets insights out of your contracts, memos, and other documents.</p>
-    <p>Contact us: <a href="mailto:hello@pimlico.tech">hello@pimlico.tech</a></p>
+<body>
+    <p>If you are not redirected automatically, <a href="/email">click here</a>.</p>
+    <script>
+        window.location.href = "/email";
+    </script>
 </body>
 </html>
- -->
-
- <!DOCTYPE html>
- <html>
- <head>
-     <title>Manifesto AI</title>
-     <style type="text/css">
-         html {
-             overflow: auto;
-         }  		
-         html,
-         body,
-         div,
-         iframe {
-             margin: 0px;
-             padding: 0px;
-             height: 100%;
-             border: none;
-         }	
-         iframe {
-             display: block;
-             width: 100%;
-             border: none;
-             overflow-y: auto;
-             overflow-x: hidden;
-         }
-     </style>
- </head>
- <body>
-     <iframe src="https://manifesto-v1.streamlit.app/?embed=true"
-             frameborder="0"
-             marginheight="0"
-             marginwidth="0"
-             width="100%"
-             height="100%"
-             scrolling="auto">
- </iframe>
- </body>
