--- a/manifesto.html
+++ b/manifesto.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pimlico Manifesto</title>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QET2H69ZT1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-QET2H69ZT1');
+</script>
+
 <body style="margin: 0; padding: 0;">
     <!-- Embedding Streamlit app -->
     <iframe src="https://manifesto-v1.streamlit.app/?embed=true&embed_options=disable_scrolling" style="width: 100%; height: 100vh; border: none;"></iframe>
