--- a/email.html
+++ b/email.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pimlico Email</title>
+    <style>
+        body {
+            background-color: #0E1117;
+        }
+    </style>
 </head>
 <body style="margin: 0; padding: 0;">
     <!-- Embedding Streamlit app -->
-    <iframe src="https://pimlico-email.streamlit.app/?embed=true&embed_options=disable_scrolling" style="width: 100%; height: 100vh; border: none;"></iframe>
+    <iframe src="https://pimlico-email.streamlit.app/?embed=true" style="width: 100%; height: 100vh; border: none;"></iframe>
 </body>
 </html>
