--- a/manifesto.html
+++ b/manifesto.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pimlico Manifesto</title>
+    <style>
+        body {
+            background-color: #0E1117;
+        }
+    </style>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -17,6 +22,6 @@
 
 <body style="margin: 0; padding: 0;">
     <!-- Embedding Streamlit app -->
-    <iframe src="https://manifesto-v1.streamlit.app/?embed=true&embed_options=disable_scrolling" style="width: 100%; height: 100vh; border: none;"></iframe>
+    <iframe src="https://manifesto-v1.streamlit.app/?embed=true" style="width: 100%; height: 100vh; border: none;"></iframe>
 </body>
 </html>
