--- a/email.html
+++ b/email.html
@@ -10,6 +10,17 @@
         }
     </style>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-85VNHZMJN1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-85VNHZMJN1');
+</script>
+
 <body style="margin: 0; padding: 0;">
     <!-- Embedding Streamlit app -->
     <iframe src="https://pimlico-email.streamlit.app/?embed=true" style="width: 100%; height: 100vh; border: none;"></iframe>
