--- a/email.html
+++ b/email.html
@@ -23,6 +23,6 @@
 
 <body style="margin: 0; padding: 0;">
     <!-- Embedding Streamlit app -->
-    <iframe src="https://pimlico-email.streamlit.app/?embed=true" style="width: 100%; height: 100vh; border: none;"></iframe>
+    <iframe src="https://pimlico-email.streamlit.app/?embedded=true" style="width: 100%; height: 100vh; border: none;"></iframe>
 </body>
 </html>
