--- a/manifesto.html
+++ b/manifesto.html
@@ -22,6 +22,6 @@
 
 <body style="margin: 0; padding: 0;">
     <!-- Embedding Streamlit app -->
-    <iframe src="https://manifesto-v1.streamlit.app/?embed=true" style="width: 100%; height: 100vh; border: none;"></iframe>
+    <iframe src="https://manifesto-v1.streamlit.app/?embedded=true" style="width: 100%; height: 100vh; border: none;"></iframe>
 </body>
 </html>
