Redirect to manifesto

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=/email">
-    <title>Redirecting to Pimlico Email app</title>
+    <meta http-equiv="refresh" content="0; url=/manifesto">
+    <title>Redirecting to Pimlico Manifesto app</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="/email">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="/manifesto">click here</a>.</p>
     <script>
-        window.location.href = "/email";
+        window.location.href = "/manifesto";
     </script>
 </body>
 </html>
